# utilities_delete_empty_folder_paths

./: PROJECT_LOG.md  README.md  agents.md  errors.md  pyproject.toml  requirements.txt
recordings/: delete_empty_dirs_aurora.tape  delete_empty_dirs_help.tape  delete_empty_dirs_run.tape
src/delete_empty_dirs/: __init__.py  __main__.py  cli.py  core.py  logging_utils.py  models.py  render.py
templates/: citrus_console.tape  forest_glow.tape  nebula_overview.tape  neon_grid.tape  noir_minimal.tape  render_all.sh
tests/: conftest.py  test_cli.py  test_core.py
